--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -17,9 +17,12 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" [routerLink]="'training-tab'">Training <span class="sr-only">(current)</span></a>
+                <a class="nav-link" [routerLink]="'sarneg-tab'">SARNEG <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="'vigenere-tab'">Vigenere </a>
+            </li>
+            <!-- <li class="nav-item">
                 <div class="btn-group">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
                         aria-expanded="false">
@@ -30,16 +33,7 @@
                                 (click)="selectProcedure(item)">{{item.name}}</button></li>
                     </ul>
                 </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="'edit-procedure-tab'">Edit Training</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="'timer-tab'">Timer</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="'settings-tab'">Settings</a>
-            </li>
+            </li> -->
             <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
