--- a/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.html
@@ -2,4 +2,6 @@
     <button title="sarneg" type="button" class="btn btn-outline-primary">
         <img src="./../../../assets/imgs/sarneg.png" alt="">
     </button>
+    {{name}}
+    {{icon}}
 </div>
