--- a/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
@@ -1,4 +1,32 @@
 <div>
+    <div class="p-2">
+        <div class="input-group mb-3">
+            <input [(ngModel)]="wordDecoded" type="text" class="form-control" placeholder="Username" pattern="[0-9]"
+                aria-label="Username" aria-describedby="basic-addon1" (change)="encode()" (keyup)="encode()">
+        </div>
 
-    
+        <div class="input-group mb-3">
+            <input [(ngModel)]="wordEncoded" type="text" class="form-control" placeholder="Username"
+                aria-label="Username" aria-describedby="basic-addon1" (change)="decode()" (keyup)="decode()">
+        </div>
+    </div>
+
+
+
+
+    <div class="d-grid gap-1 p-2">
+        <div>Active Coderword:</div>
+        <button type="button" name="{{currentCodeWord}}" id="{{currentCodeWord}}" class="btn btn-primary">
+            {{currentCodeWord}}
+        </button>
+    </div>
+
+    <div class="d-grid gap-1 p-2">
+        <div>Coderwords:</div>
+        <button *ngFor="let item of codeWords" type="button" name="{{item}}" id="{{item}}"
+            class="btn btn-outline-secondary" (click)="changeCodeword(item)">
+            {{item}}
+        </button>
+    </div>
+
 </div>
