--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" [routerLink]="'sarneg-tab'">SARNEG <span class="sr-only">(current)</span></a>
+                <a class="nav-link" [routerLink]="'sarneg-page'">SARNEG </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="'vigenere-tab'">Vigenere </a>
