--- a/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
@@ -1,13 +1,13 @@
 <div>
     <div class="p-2">
         <div class="input-group mb-3">
-            <input [(ngModel)]="wordDecoded" type="text" class="form-control" placeholder="Username" pattern="[0-9]"
-                aria-label="Username" aria-describedby="basic-addon1" (change)="encode()" (keyup)="encode()">
+            <input [(ngModel)]="wordDecoded" type="number" class="form-control" placeholder="wordDecoded" pattern="[0-9]"
+                aria-label="wordDecoded" aria-describedby="basic-addon1" (change)="encode()" (keyup)="encode()">
         </div>
 
         <div class="input-group mb-3">
-            <input [(ngModel)]="wordEncoded" type="text" class="form-control" placeholder="Username"
-                aria-label="Username" aria-describedby="basic-addon1" (change)="decode()" (keyup)="decode()">
+            <input [(ngModel)]="wordEncoded" type="text" class="form-control" placeholder="wordEncoded"
+                aria-label="wordEncoded" aria-describedby="basic-addon1" (change)="decode()" (keyup)="decode()">
         </div>
     </div>
 
