--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -7,11 +7,24 @@
             height="30" alt="">
     </div>
 
+    <div class="d-flex align-items-center">
+        <div class="" href="#" [routerLink]="'sarneg-page'">
+            <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
+            <img src="assets/imgs/sarneg.png" width="30"
+                height="30" alt="">
+        </div>
+        <div class="mx-2" href="#" [routerLink]="'vigenere-page'">
+            <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
+            <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/shoot-2801222-2321882.png?f=webp" width="30"
+                height="30" alt="">
+        </div>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
 
 
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -20,7 +33,7 @@
                 <a class="nav-link" [routerLink]="'sarneg-page'">SARNEG </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="'vigenere-tab'">Vigenere </a>
+                <a class="nav-link" [routerLink]="'vigenere-page'">Vigenere </a>
             </li>
             <!-- <li class="nav-item">
                 <div class="btn-group">
