--- a/radio-operator-toolbox-angular/src/app/core-components/footer/footer.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/footer/footer.component.html
@@ -1,3 +1,5 @@
 <div class="footer fixed-bottom align-middle">
-    <span>(c)2023 KubaMiszcz</span>
+    <span><a [href]="'https://github.com/KubaMiszcz/RadioOperatorToolbox'" target="_blank">(c)2023 KubaMiszcz</a></span>
+    <span>   v.{{version}}</span>
+    <span>, build   v.{{build}}</span>
 </div>
