--- a/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.html
@@ -1,6 +1,6 @@
 <div>
     <button title="sarneg" type="button" class="btn btn-outline-primary">
-        <img src="assets/imgs/sarneg.png" alt="">
+        <img src="assets/imgs/sarneg-image.png" alt="">
     </button>
     {{name}}
     {{icon}}
