--- a/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.scss
+++ b/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.scss
@@ -2,7 +2,7 @@ button {
     width: 10rem;
     height: 10rem;
     background-color: #234e3a;
-    // background-image: url("assets/imgs/sarneg.png");
+    // background-image: url("assets/imgs/sarneg-image.png");
 
     img {
         height: 100%;
