--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -10,14 +10,26 @@
     <div class="d-flex align-items-center">
         <div class="" href="#" [routerLink]="'sarneg-page'">
             <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
-            <img src="assets/imgs/sarneg.png" width="30"
-                height="30" alt="">
+            <img src="assets/imgs/sarneg-image.png" height="30" alt="">
         </div>
         <div class="mx-2" href="#" [routerLink]="'vigenere-page'">
             <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
             <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/shoot-2801222-2321882.png?f=webp" width="30"
                 height="30" alt="">
         </div>
+        <div class="mx-2" href="#" [routerLink]="'reports-page'">
+            <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
+            <img src="assets/imgs/reports-image1.png" 
+                height="30" alt="">
+        </div>
+        <div class="mx-2" href="#" [routerLink]="'reports-page'">
+            <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
+            <img src="assets/imgs/reports-image2.png" 
+                height="30" alt="">
+        </div>
+
+
+
 
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -27,37 +39,57 @@
     </div>
 
 
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collsapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" [routerLink]="'sarneg-page'">SARNEG </a>
+                <a class="nav-link" [routerLink]="'sarneg-page'">kodowanie SARNEG </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="'vigenere-page'">Vigenere </a>
+                <a class="nav-link" [routerLink]="'vigenere-page'">kodowanie Vigenere</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="reportsNames[0]+'vigenere-page'">{{reportsNames[0]}}</a>
+            </li>
+
+
+
+
             <!-- <li class="nav-item">
                 <div class="btn-group">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        Wybrany Plan: {{(currentProcedure$ |async)?.name ?? 'brak'}}
+                        Wybrany Plan: 'brak'
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li *ngFor="let item of allProcedures$ |async"><button class="dropdown-item" type="button"
-                                (click)="selectProcedure(item)">{{item.name}}</button></li>
+                        <li *ngFor="let item of reportsNames"><button class="dropdown-item"
+                                type="button">{{item}}</button></li>
                     </ul>
                 </div>
             </li> -->
-            <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+
+
+
+
+
+            <li class="nav-item dropdown d-flex justify-content-end ">
+                <div class="col-4 "> </div>
+                <div class="col-8 d-flex flex-column">
+
+                    <button type="button" class="btn btn-secondary dropdown-toggle d-flex justify-content-end"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Wszystkie Raporty
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a *ngFor="let item of reportsNames" class="dropdown-item d-flex justify-content-end"
+                            href="#">{{item}}</a>
+                    </div>
                 </div>
-            </li> -->
+            </li>
+
+
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="'vigenere-page'">Help </a>
+            </li>
         </ul>
     </div>
 </nav>
