--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.scss
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.scss
@@ -1,4 +1,11 @@
-.nav-link{
+.nav-link {
     color: bisque;
     text-align: end;
+}
+
+.dropdown-toggle::after {
+    margin-top: .5em;
+    border-top: .6em solid;
+    border-right: .6em solid transparent;
+    border-left: .6em solid transparent;
 }
