--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -14,17 +14,12 @@
         </div>
         <div class="mx-2" href="#" [routerLink]="'vigenere-page'">
             <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
-            <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/shoot-2801222-2321882.png?f=webp" width="30"
+            <img src="assets/imgs/vigenere-image.png" width="30"
                 height="30" alt="">
         </div>
         <div class="mx-2" href="#" [routerLink]="'reports-page'">
             <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
-            <img src="assets/imgs/reports-image1.png" 
-                height="30" alt="">
-        </div>
-        <div class="mx-2" href="#" [routerLink]="'reports-page'">
-            <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
-            <img src="assets/imgs/reports-image2.png" 
+            <img src="assets/imgs/reports-image.png" 
                 height="30" alt="">
         </div>
 
