--- a/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
@@ -8,10 +8,7 @@
 </div>
 <div class="row ${1| ,row-cols-2,row-cols-3, auto,justify-content-md-center,|}">
     <div class="col-6 ">
-        <app-menu-tile [name]="'1'" [icon]="''"></app-menu-tile>
-    </div>
-    <div class="col-6 ">
-        <app-menu-tile [name]="'1'" [icon]="''"></app-menu-tile>
+        <app-menu-tile [name]="'reports'"></app-menu-tile>
     </div>
 </div>
 
