--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -34,7 +34,7 @@
     </div>
 
 
-    <div class="collsapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" [routerLink]="'sarneg-page'">kodowanie SARNEG </a>
