--- a/radio-operator-toolbox-angular/src/app/core-components/footer/footer.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/footer/footer.component.html
@@ -1,5 +1,10 @@
 <div class="footer fixed-bottom align-middle">
-    <span><a [href]="'https://github.com/KubaMiszcz/RadioOperatorToolbox'" target="_blank">(c)2023 KubaMiszcz</a></span>
-    <span>   v.{{version}}</span>
-    <span>, build   v.{{build}}</span>
+    <span>
+        <a [href]="'https://github.com/KubaMiszcz/RadioOperatorToolbox'" target="_blank">
+            (c)2023 KubaMiszcz
+            <i class="fab fa-github    "></i>
+        </a>
+    </span>
+    <small> v.{{version}}</small>
+    <small>, build v.{{build}}</small>
 </div>
