--- a/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
@@ -1,14 +1,16 @@
 <div>
     <div class="p-2">
-        <label for="exampleFormControlInput1" class="form-label">Liczba do zakodowania</label>
+        <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Numery do zakodowania</label>
+        <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Odkodowane numery</label>
         <div class="input-group mb-3">
-            <input [(ngModel)]="wordDecoded" type="number" class="form-control" placeholder="Liczba do zakodowania" pattern="[0-9]"
+            <input [(ngModel)]="numbersDecoded" type="number" class="form-control" placeholder="kodowane numery" pattern="[0-9]"
                 aria-label="wordDecoded" aria-describedby="basic-addon1" (change)="encode()" (keyup)="encode()">
         </div>
 
-        <label for="exampleFormControlInput1" class="form-label">Liczba do zdekodowania</label>
+        <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Zakodowane numery</label>
+        <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Numery do zdekodowania</label>
         <div class="input-group mb-3">
-            <input [(ngModel)]="wordEncoded" type="text" class="form-control" placeholder="Liczba do zdekodowania"
+            <input [(ngModel)]="numbersEncoded" type="text" class="form-control" placeholder="dekodowane numery"
                 aria-label="wordEncoded" aria-describedby="basic-addon1" (change)="decode()" (keyup)="decode()">
         </div>
     </div>
