--- a/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="d-grid gap-1 p-2">
-        <div>Coderwords:</div>
+        <div>Codewords:</div>
         <button *ngFor="let item of codeWords" type="button" name="{{item}}" id="{{item}}"
             class="btn btn-outline-secondary" (click)="changeCodeword(item)">
             {{item}}
