--- a/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
@@ -6,6 +6,17 @@
         <app-menu-tile [name]="'vigenere'" [routerLink]="[ '/vigenere-page']"></app-menu-tile>
     </div>
 </div>
+
+<picture>
+    <img
+        src="file://///FILESERVER/Zdjecia-SSHD/aa.jpg"
+        class="img-fluid"
+        alt="image desc"
+    />
+</picture>
+
+
+
 <div class="row ${1| ,row-cols-2,row-cols-3, auto,justify-content-md-center,|}">
     <div class="col-6 ">
         <app-menu-tile [name]="'reports'"></app-menu-tile>
