--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -1,23 +1,24 @@
 <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
 
 
-    <div class="navbar-brand" href="#">
+    <div class="navbar-brand" [routerLink]="'home-tab'">
         <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
-        <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/shoot-2801222-2321882.png?f=webp" width="30"
+        <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/shoot-2801222-2321882.png?f=webp" 
+        width="30"
             height="30" alt="">
     </div>
 
     <div class="d-flex align-items-center">
-        <div class="" href="#" [routerLink]="'sarneg-page'">
+        <div class="" [routerLink]="'sarneg-page'">
             <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
             <img src="assets/imgs/sarneg-image.png" height="30" alt="">
         </div>
-        <div class="mx-2" href="#" [routerLink]="'vigenere-page'">
+        <div class="mx-2" [routerLink]="'vigenere-page'">
             <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
             <img src="assets/imgs/vigenere-image.png" width="30"
                 height="30" alt="">
         </div>
-        <div class="mx-2" href="#" [routerLink]="'reports-page'">
+        <div class="mx-2" [routerLink]="'reports-page'">
             <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
             <img src="assets/imgs/reports-image.png" 
                 height="30" alt="">
