--- a/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
@@ -14,3 +14,18 @@
     </div>
 </div>
 
+<button
+    type="button"
+    class="btn btn-primary"
+ (click)="savels()">
+    savelocal
+</button>
+<button
+    type="button"
+    class="btn btn-primary"
+ (click)="loadls()">
+    readlocal
+</button>
+
+<p>{{myvar}}</p>
+
