--- a/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
@@ -4,14 +4,14 @@
         <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Odkodowane numery</label>
         <div class="input-group mb-3">
             <input [(ngModel)]="numbersDecoded" type="number" class="form-control" placeholder="kodowane numery" pattern="[0-9]"
-                aria-label="wordDecoded" aria-describedby="basic-addon1" (change)="encode()" (keyup)="encode()">
+                aria-label="wordDecoded" aria-describedby="basic-addon1" (change)="encodeWord()" (keyup)="encodeWord()">
         </div>
 
         <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Zakodowane numery</label>
         <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Numery do zdekodowania</label>
         <div class="input-group mb-3">
             <input [(ngModel)]="numbersEncoded" type="text" class="form-control" placeholder="dekodowane numery"
-                aria-label="wordEncoded" aria-describedby="basic-addon1" (change)="decode()" (keyup)="decode()">
+                aria-label="wordEncoded" aria-describedby="basic-addon1" (change)="decodeWord()" (keyup)="decodeWord()">
         </div>
     </div>
 
