--- a/radio-operator-toolbox-angular/src/app/components/vigenere-page/vigenere-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/vigenere-page/vigenere-page.component.html
@@ -4,8 +4,9 @@
         <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Tekst do zakodowania</label>
         <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Odkodowany tekst</label>
         <div class="input-group mb-3">
-            <input [(ngModel)]="textDecoded" type="text" class="form-control" placeholder="kodowany tekst" pattern="[0-9]"
-                aria-label="textDecoded" aria-describedby="basic-addon1" (change)="encodeText()" (keyup)="encodeText()">
+            <input [(ngModel)]="textDecoded" type="text" class="form-control" placeholder="kodowany tekst"
+                pattern="[0-9]" aria-label="textDecoded" aria-describedby="basic-addon1" (change)="encodeText()"
+                (keyup)="encodeText()">
         </div>
 
         <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Zakodowany tekst</label>
@@ -14,6 +15,20 @@
             <input [(ngModel)]="textEncoded" type="text" class="form-control" placeholder="dekodowany tekst"
                 aria-label="textEncoded" aria-describedby="basic-addon1" (change)="decodeText()" (keyup)="decodeText()">
         </div>
+    </div>
+
+    <div>
+        <td style="border: solid;">
+            <tr>
+                <td></td>
+                <td  style="border: 2px black solid" *ngFor="let i of codeTable; index as k">{{k+1}}</td>
+            </tr>
+            <tr *ngFor="let row of codeTable; index as idx">
+                <td  style="border: 2px black solid" >{{idx+1}}</td>
+                <td  style="border: 2px black solid" *ngFor="let letter of row">{{letter}}</td>
+            </tr>
+        </td>
+
     </div>
 
 
