update font etc

--- a/radio-operator-toolbox-angular/src/app/app.component.html
+++ b/radio-operator-toolbox-angular/src/app/app.component.html
@@ -1,13 +1,10 @@
-<div class="row">
-    <div class="d-md-none ">
+<!-- <div class="row"> -->
+    <!-- <div class="d-md-none "> </div> -->
+    <!-- <div class="col-md-auto "> -->
 
-    </div> 
-    <div class="col-md-auto ">
-        
         <app-nav-bar></app-nav-bar>
         <router-outlet></router-outlet>
         <app-footer></app-footer>
-    </div>
-    <div class="d-md-none ">
-    </div>
-</div>
+    <!-- </div> -->
+    <!-- <div class="d-md-none "> </div> -->
+<!-- </div> -->
