--- a/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="m-2">
     <button title="sarneg" type="button" class="btn btn-outline-primary">
         <img src="assets/imgs/{{iconName}}" alt="">
     </button>
