--- a/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
@@ -1,4 +1,4 @@
-<div class="row ${1| ,row-cols-2,row-cols-3, auto,justify-content-md-center,|}">
+<div class="row justify-content-md-center">
     <div class="col-6 ">
         <app-menu-tile [name]="'sarneg'" [routerLink]="[ '/sarneg-page']"></app-menu-tile>
     </div>
@@ -8,7 +8,7 @@
 </div>
 
 
-<div class="row ${1| ,row-cols-2,row-cols-3, auto,justify-content-md-center,|}">
+<div class="row justify-content-md-center">
     <div class="col-6 ">
         <app-menu-tile [name]="'reports'"></app-menu-tile>
     </div>
