--- a/radio-operator-toolbox-angular/src/app/app.component.html
+++ b/radio-operator-toolbox-angular/src/app/app.component.html
@@ -1,10 +1,17 @@
-<!-- <div class="row"> -->
-    <!-- <div class="d-md-none "> </div> -->
-    <!-- <div class="col-md-auto "> -->
-
-        <app-nav-bar></app-nav-bar>
-        <router-outlet></router-outlet>
-        <app-footer></app-footer>
-    <!-- </div> -->
-    <!-- <div class="d-md-none "> </div> -->
+<!-- <div class="d-flex flex-row justify-content-center">  -->
+    <!-- <div class="col-xxl-4 d-xxl-none" ></div>
+    <div class="col-md-4 "> -->
+<!-- <div class="d-flex flex-shrink-0"> -->
+    <app-nav-bar></app-nav-bar>
+<div class="d-flex justify-content-center">
+        <div class="content">
+            
+                    <router-outlet></router-outlet>
+                    <app-footer></app-footer>
+            
+        </div>
+</div>
+<!-- </div>     -->
+<!-- </div> -->
+    <!-- <div class="col-md-4"></div> -->
 <!-- </div> -->
