--- a/radio-operator-toolbox-angular/src/app/core-components/footer/footer.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/footer/footer.component.html
@@ -3,8 +3,7 @@
         <a [href]="'https://github.com/KubaMiszcz/RadioOperatorToolbox'" target="_blank">
             (c)2023 KubaMiszcz
             <i class="fab fa-github    "></i>
-            <small> v.{{version}}</small>
-            <small>, build v.{{build}}</small>
+            <small> v.{{version}}.{{build}}</small>
         </a>
     </span>
 </div>
